--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ p {
     display: flex;
 }
 
-.recipe-container {
+.recipe {
     margin: 8vh auto;
     width: 90%;
     max-width: 735px;
@@ -56,46 +56,47 @@ p {
     border-radius: 20px;
 }
 
-.recipe-container .img {
+.recipe__image {
     display: flex;
     width: 100%;
     padding: var(--padding);
     padding-bottom: 0;
 
-    & img {
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-        object-position: center;
-        border-radius: 12px;
-    }
 }
 
-.recipe-container .content {
+.recipe__image img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 12px;
+}
+
+.recipe__content {
     padding: var(--padding);
-    
     display: flex;
     flex-direction: column;
     justify-content: start;
     gap: 38px;
+
+    font: 400 1rem/150% 'Outfit';
+    color: var(--stone-600);
 }
 
-.recipe-container .summary {
+.recipe__content b {
+    font-weight: 700;
+}
+
+.recipe__header {
     display: flex;
     flex-direction: column;
     gap: 25px;
-
-    & .title {
-        font: 400 2.3rem/1 'YoungSerif', sans-serif;
-        color: var(--stone-900);
-    }
-
-    & .description {
-        font: 400 1rem/150% 'Outfit';
-        color: var(--stone-600);
-    }    
 }
 
+.recipe__title {
+    font: 400 2.3rem/1 'YoungSerif', sans-serif;
+    color: var(--stone-900);
+}
 
 .list {
     list-style: none;
@@ -107,12 +108,12 @@ p {
 .list li {
     display: flex;
     align-items: center;
-    margin-left: 5px;
+    margin-left: .5rem;
     gap: 20px;
 }
 
 
-.ul.list li::before {
+.list--unordered li::before {
     content: '';
     display: inline-block;
     width: 4px;
@@ -121,117 +122,104 @@ p {
     background-color: var(--stone-900);
 }
 
+.list--unordered--rose li::before {
+    background-color: var(--rose-800);
+}
 
-.ol.list li {
+
+.list--ordered li {
     align-items: start;
     counter-increment: list-counter;
 }
 
-.ol.list li::before {
+.list--ordered li::before {
     content: counter(list-counter) ". ";
     display: inline-block;
     font-weight: 700;
 } 
 
-.info {
-    font: 400 1rem/150% 'Outfit';
-    color: var(--stone-600);
-}
-
-.info li b {
-    font-weight: 700;
+.list--unordered--brown li::before{
+    background-color: var(--brown-800);
 }
 
 
-.recipe-container .preparation-time {
+.list--ordered--brown li::before{
+    color: var(--brown-800);
+}
+
+.recipe__time {
     padding: 30px;
     border-radius: 12px;
     background-color: var(--rose-50);
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
 
-    & .title {
-        font: 600 1.2rem/1 'Outfit';
-        color: var(--rose-800);
-    }
-
-    & .ul.info li::before {
-        background-color: var(--rose-800);
-    }
-
+.recipe__time-title {
+    font: 600 1.2rem/1 'Outfit';
+    color: var(--rose-800);
 }
 
 
-
-.section {
+.recipe__section {
     display: flex;
     flex-direction: column;
     gap: 24px;
-    
-
-    & .title {
-        font: 400 1.75rem/1 'YoungSerif', sans-serif;
-        color: var(--brown-800);
-    }
-
-    & .ul.list li::before {
-        background-color: var(--brown-800);
-    }
-
-    & .ol.info li::before {
-        color: var(--brown-800);
-    }
 }
 
-.section:not(:last-child) {
+.recipe__section-title {
+    font: 400 1.75rem/1 'YoungSerif', sans-serif;
+    color: var(--brown-800);
+}
+
+.recipe__section:not(:last-child) {
     border-bottom: solid 1px #e0e0e0;
     padding-bottom: 30px;
 }
 
-.nutrition-table {
+.recipe__nutrition-table {
     margin-top: 15px;
     width: 100%;
     border-collapse: collapse;
 }
 
-.nutrition-table tr {
+.recipe__nutrition-table tr {
     width: 100%;
 }
 
-.nutrition-table tr:not(:last-child) td {
+.recipe__nutrition-table tr:not(:last-child) td {
     border-bottom: solid 1px #e0e0e0;
 }
 
-.nutrition-table td {   
+.recipe__nutrition-table td {   
     padding-block: 10px;
 }
 
-.nutrition-table td:last-child {
+.recipe__nutrition-table td:last-child {
     width: 50%;
     font-weight: 700;
     color: var(--brown-800);
 }
 
-.nutrition-table td:not(:last-child){
+.recipe__nutrition-table td:not(:last-child){
     padding-inline: 30px 10px;
 }
 
 
 @media only screen and (max-width: 450px) {
-    .recipe-container {
-        overflow: hidden;
-    }
-    .recipe-container {
+    .recipe {
         width: 100%;
         margin: 0;
         border-radius: 0;
+        overflow: hidden;
     }
     
-    .recipe-container .img {
+    .recipe__image {
         padding: 0;
-        & img {
-            border-radius: 0;
-        }
+    }
+
+    .recipe__image img {
+        border-radius: 0;
     }
 }
